# nix-update

./: .envrc  .gitignore  .mergify.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  bors.toml  default.nix  flake.nix  nix-update.py  nixpkgs-update.py  nixpkgs-updater.py  pyproject.toml  renovate.json  setup.cfg  shell.nix  treefmt.nix
.github/workflows/: automerge.yml  cache-test-deps.yml  gc.yml  nix-fmt-checks.yaml  publish.yml  test.yml  update-flake-inputs.yml
nix_update/: __init__.py  __main__.py  cargo.py  dependency_hashes.py  diff_urls.py  errors.py  eval.nix  eval.py  git.py  hashes.py  lockfile.py  options.py  update.py  utils.py  version.py  version_compare.py  version_info.py
nix_update/version/: __init__.py  bitbucket.py  crate.py  gitea.py  github.py  gitlab.py  http.py  npm.py  pypi.py  rubygems.py  savannah.py  sourcehut.py  sparkle.py  version.py
tests/: __init__.py  conftest.py  consul.patch  test_bitbucket.py  test_branch.atom  test_branch.py  test_branch_commits_master.atom  test_branch_releases.atom  test_branch_releases.json  test_build_only_when_changed.py  test_build_without_flake.py  test_bun.py  test_cargo_lock_expand.py  test_cargo_lock_generate.py  test_cargo_lock_update.py  test_cargo_vendor_deps.py  test_composer.py  test_composer_old.py  test_crate.py  test_custom_deps.py  test_dart.py  test_fetchurl_github_release.py  test_flake.py  test_flake_import_path_reset.py  test_flake_subdir.py  test_flake_use_update_script.py  test_fod_subpackage.py  test_git.py  test_gitea.py  test_github.py  test_github_releases_pagination.py  test_gitlab.py  test_gitlab_fetch_latest_version.py  test_gradle_mitm_cache.py  test_hash_extraction.py  test_maven.py  test_mix.py  test_npm.py  test_npm_fetch_latest_version.py  test_npm_lock_generate.py  (+19 more)
tests/pytest_shard/: __init__.py  pytest_shard.py
tests/testpkgs/: bitbucket.nix  bun.nix  composer-old.nix  composer.nix  crate.nix  default.nix  fetchurl-github-release.nix  flake-use-update-script.nix  flake.nix  fod-subpackage.nix  gitea.nix  github-fetchtree-private.nix  github-fetchtree.nix  github-forcefetchgit.nix  github-no-release.nix  github-tag.nix  github.nix  gitlab.nix  let-bound-version.nix  maven.nix  mix.nix  net-news-wire.nix  npm-package.nix  npm-scoped.nix  npm.nix  pnpm.nix  postgresql.nix  pypi.nix  savanna.nix  set.nix  sourcehut-snapshot.nix  sourcehut.nix  subpackage.nix  version-prefix.nix  versionkey.nix
tests/testpkgs/cargo-lock-expand/: default.nix
tests/testpkgs/cargo-lock-generate/simple/: default.nix
tests/testpkgs/cargo-lock-generate/with-lockfile-metadata-path/: default.nix
tests/testpkgs/cargo-lock-generate/with-lockfile-metadata-path-outside-workspace/: default.nix
tests/testpkgs/cargo-lock-update/: default.nix
tests/testpkgs/cargo-vendor-deps/: non-rust-package.nix  rust-package.nix
tests/testpkgs/custom-deps/: default.nix
tests/testpkgs/custom-deps/pnpm/: package.json  pnpm-lock.yaml
tests/testpkgs/custom-deps/yarn/: package.json
tests/testpkgs/dart/: default.nix
tests/testpkgs/gradle-mitm-cache/: default.nix
tests/testpkgs/npm-lock-generate/: default.nix
tests/testpkgs/nuget-deps-generate/: default.nix
tests/testpkgs/pubspec-lock-generate/: default.nix  pubspec.lock.json
tests/testpkgs/pubspec-lock-update/: default.nix
