[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nix-update"
description = "Swiss-knife for updating nix packages"
version = "1.5.2"
authors = [{ name = "Jörg Thalheim", email = "joerg@thalheim.io" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Mic92/nix-update"

[project.scripts]
nix-update = "nix_update:main"

[tool.ruff]
target-version = "py311"
line-length = 88

lint.select = ["E", "F", "I", "U"]
lint.ignore = [ "E501" ]

[tool.mypy]
python_version = "3.11"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
