[metadata]
name = nix-update
version = 0.0.0
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/Mic92/nix-update
description = Update Nix packages like it is 2020
long-description = file: README.rst
license = MIT
license-file = LICENSE.rst
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    nix-update = nix_update:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1
